# FeOFu

./: 1_Languages  1_Languages.md  2_APIs_Libs.md  3_NewLanguage  3_NewLanguage.md  4_TypeSystemDesign.md  GPUCostModel.md  IncrementalCompilationAndIDESupport.md  OldReadme.md  ParsingAndSyntax.md  README.md  Readings.md  ScientificUsage.md  Semantics.md  mate-brainstorm.md  plans-of-csaba.md  recursion_schemes.md  table_of_irs.md
edsl/: Graphics.idr  LICENSE  LinksAndNotes.md  README.md  gpu.cabal  stack.yaml
smt/const_syn/: constant1.py  constant2.py  constant3.py  constant4.py  constant5.py  constant_forall.py
smt/const_syn_ce/: constant_ce1.py  constant_ce2.py
smt/einstein/: einstein.py  puzzle.txt
smt/float/: diff.py  pluszero.py
smt/sudoku/: in53.pzl  sudoku.py
smt/symex/: 1.c  1.py  2.c  2.py  3.c  3.py
smt/xkcd/: xkcd.py
