name:                gpu
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
category:            Compiler
build-type:          Simple
--extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      .
  exposed-modules:
      Dummy

  build-depends:
      base
    , idris

  default-language:    Haskell2010
